[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dlno"
dynamic = ["version"]
dependencies = [
  "pyscf",
  "opt_einsum",
]
requires-python = ">=3.8"
authors = [
  {name = "Xing Zhang", email = "zhangxing.nju@gmail.com"},
]
maintainers = [
  {name = "Xing Zhang", email = "zhangxing.nju@gmail.com"}
]
description = "Domain truncated Local Natural Orbital methods"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 3 - alpha",
  "Topic :: Scientific/Engineering",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Documentation = "https://readthedocs.org"
Repository = "https://github.com/fishjojo/dlno.git"
